k8s/namespace.yaml
# boonya-iot 命名空间：所有 K8s 资源统一部署在该命名空间下
apiVersion: v1
kind: Namespace
metadata:
  name: boonya-iot
  labels:
    app.kubernetes.io/part-of: boonya-iot
